<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">5C Menu</string>
    <string name="textview">5C Menu</string>
    <string name="hint">Search for food items here</string>
    <string name="action_settings">Settings</string>

    <string name="button1">Hoch-Shanahan</string>
    <string name="button2">Malott Commons</string>
    <string name="button3">Collins</string>
    <string name="button4">McConnell</string>
    <string name="button5">Frank</string>
    <string name="button6">Frary</string>
    <string name="button7">Oldenborg</string>

    <string name="title_activity_menu_page">MenuPage</string>
    <string name="hoch_title">Hoch-Shanahan</string>
    <string name="meal">Meal</string>
    <string name="hours">10:00am - 1:00 pm</string>

    <color name="white">#FFFFFF</color>
    <color name="gold">#D1A319</color>
    <color name="black">#000000</color>
    <color name="textgray">#c7C9CB</color>
    <color name="bgcolor">#303d45</color>


</resources>
